--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,10 @@ dependencies:
       url: https://github.com/iusama46/jitsi_meet-customized.git
       ref: ui
   intl: ^0.17.0
-  email_auth: ^0.0.1+4
   parse_server_sdk_flutter: ^3.1.0
+  random_string: ^2.3.1
+  url_launcher: ^6.0.9
+  flutter_linkify: ^5.0.2
 
 
 dev_dependencies:
